--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jquery": "^3.5.1",
     "slick-carousel": "^1.8.1",
     "vue": "^2.6.11",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
